gtk3: Ensure titlebutton icons stay hidden
Arc titlebutton images are drawn with a background-image, and the
titlebutton icons from the icon theme are hidden by drawing them with
a transparent color.

For some reason this is not enough with the GTK3 Inkscape, so make
the actual image element fully transparent.

--- a/common/gtk-3.0/sass/_common.scss
+++ b/common/gtk-3.0/sass/_common.scss
@@ -3326,6 +3326,9 @@ headerbar,
 
       &:backdrop { opacity: 1; }
     }
+
+    & > image { opacity: 0; }
+
     // Load png assets for each button
     @each $k in ('close','maximize', 'minimize') {
       @each $l, $m in ('',''), (':backdrop','-backdrop'), (':hover','-hover'), (':active','-active') {
